# prospector-btc

./: .env.backup.md  .eslintrc.json  .gitignore  .npmrc  Cargo.toml  README.md  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  tsconfig.base.json  vercel.json
.docs/: BITACORA_PROYECTO.md  PLAN_MAESTRO_IMPLEMENTACION_V3.md  README_OPS.md  consulta-bitcojns-sql.md  manifiesto-de-pruebas.md  todo.md
.github/workflows/: build-release.yml  ci.yml  forge-miner.yml  miner-release.yml  provisioner-cron.yml  sync-types.yml
apps/census-taker/src/: forensic_generator.rs  main.rs  partitioner.rs  pipeline.rs
apps/miner-worker/: Cargo.toml
apps/miner-worker/src/: cpu_manager.rs  engine.rs  main.rs
apps/orchestrator/: Cargo.toml  Dockerfile  README_DEPLOY.md
apps/orchestrator/src/: bootstrap.rs  bootstrap_forensics.rs  kernel.rs  lib.rs  main.rs  middleware.rs  routes.rs  state.rs
apps/orchestrator/src/handlers/: admin.rs  assets.rs  lab.rs  mod.rs  stream.rs  swarm.rs  visual.rs
apps/orchestrator/src/services/: binary_packer.rs  c2_coordinator.rs  certification_authority.rs  chronos.rs  chronos_archive.rs  event_bus.rs  finding_flusher.rs  flush.rs  mission_hydrator.rs  mod.rs  outbox_relay.rs  parity_auditor.rs  reaper.rs  swarm_resurrection.rs  telemetry.rs
apps/orchestrator/src/state/: finding_vault.rs  mission_control.rs  mod.rs  operational_nexus.rs  swarm_telemetry.rs
apps/orchestrator/src/tests/: api_tests.rs  finding_flow.rs  mission_concurrency_stress.rs
apps/orchestrator/tests/: mission_concurrency_stress.rs
apps/prover/: Cargo.toml  README.md
apps/prover/src/: forge.rs  main.rs
apps/prover/tests/: sim_verification.rs
apps/web-dashboard/: .eslintrc.json  jest.config.ts  jest.setup.ts  middleware.ts  next-env.d.ts  next.config.js  postcss.config.js  project.json  proxy.ts  tailwind.config.js  tsconfig.json  tsconfig.spec.json
apps/web-dashboard/app/: global-error.tsx  global.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
apps/web-dashboard/app/[locale]/: error.tsx  layout.tsx  not-found.tsx  page.tsx
apps/web-dashboard/app/admin/: page.tsx
apps/web-dashboard/components/: admin-guard.spec.tsx  fleet-grid.tsx
apps/web-dashboard/components/layout/: breadcrumbs.tsx  footer.tsx  header.tsx  public-header.tsx  sidebar-item.tsx  sidebar.tsx  theme-toggle.tsx  top-nav.tsx  user-nav.tsx
apps/web-dashboard/components/providers/: theme-provider.tsx
apps/web-dashboard/components/system/: not-found-screen.tsx
apps/web-dashboard/config/: navigation.ts
apps/web-dashboard/hooks/: use-heimdall.ts
apps/web-dashboard/lib/auth/: config.ts
apps/web-dashboard/lib/dictionaries/: en.ts
apps/web-dashboard/lib/handlers/: auth.ts  i18n.ts  visitor.ts
apps/web-dashboard/lib/i18n/: registry.ts  schema.ts
apps/web-dashboard/lib/i18n-source/: schema.ts
apps/web-dashboard/lib/schemas/: routing.ts  schema.ts
apps/web-dashboard/lib/utils/: cn.ts  common.ts
apps/web-dashboard/messages/: en.json  es.json
apps/web-dashboard/tools/scripts/: generate-i18n.ts
libs/core/client-vault/: tsconfig.json  tsconfig.lib.json
libs/core/client-vault-rs/: Cargo.toml
libs/core/client-vault-rs/src/: lib.rs
libs/core/client-vault/src/: index.ts
libs/core/generators/src/: address_legacy.rs  satoshi_xp_synthetic.rs  wif.rs
libs/core/math-engine/: Cargo.toml
libs/core/math-engine/src/: arithmetic.rs  context.rs  curve.rs  curve_simd.rs  field.rs  field_simd.rs  hashing.rs  kangaroo.rs  lib.rs  point.rs  private_key.rs  public_key.rs  scalar.rs  secp256k1.rs
libs/core/math-engine/tests/: arithmetic_stress.rs  arithmetic_torture.rs  field_integrity_torture.rs
libs/core/probabilistic/: Cargo.toml
libs/core/probabilistic/src/: filter_wrapper.rs  lib.rs  sharded.rs
libs/core/probabilistic/tests/: bloom_reliability.rs
libs/domain/api-contracts/: package.json  tsconfig.json  tsconfig.lib.json
libs/domain/api-contracts/src/: index.ts
libs/domain/forensics/src/: android_rng.rs  debian_rng.rs  lib.rs
libs/domain/mining-strategy/: Cargo.toml
libs/domain/mining-strategy/src/: brainwallet.rs  combinatoric.rs  engines.rs  executor.rs  forensic_auditor.rs  kangaroo.rs  lib.rs  tests_execution.rs
libs/domain/mining-strategy/src/engines/: android_lcg_engine.rs  dictionary_engine.rs  forensic_auditor.rs  forensic_engine.rs  satoshi_xp_engine.rs  sequential_engine.rs
libs/domain/mining-strategy/tests/: bigint_integration.rs  satoshi_xp_forensic_integrity.rs  sequential_integrity.rs
libs/domain/models-rs/: Cargo.toml
libs/domain/models-rs/src/: finding.rs  identity.rs  lib.rs  scenario.rs  stratum.rs  telemetry.rs  tests_serialization.rs  work.rs  worker.rs
libs/infra/api-client-ts/: package.json  project.json  tsconfig.json  tsconfig.lib.json
libs/infra/api-client-ts/src/: index.ts
libs/infra/blockchain-client/: Cargo.toml
libs/infra/blockchain-client/src/: lib.rs
libs/infra/db-turso/: Cargo.toml
libs/infra/db-turso/src/: client.rs  errors.rs  schema.rs
libs/infra/db-turso/src/repositories/: archival.rs  audit_repository.rs  finding.rs  job.rs  mission_repository.rs  mod.rs  scenario_assets.rs  scenario_repository.rs  scenarios.rs  system_repository.rs  worker.rs
libs/infra/db-turso/src/repositories/identity/: mod.rs  queries.rs
libs/infra/db-turso/src/repositories/job/: math.rs  mod.rs  queries.rs
libs/infra/supabase/: package.json  project.json  tsconfig.json  tsconfig.lib.json
libs/infra/supabase/src/: index.ts
libs/infra/worker-client/: Cargo.toml
libs/infra/worker-client/src/: client.rs  errors.rs  hydrator.rs  lib.rs
libs/shared/heimdall-ts/: tsconfig.json
libs/shared/heimdall-ts/src/: index.ts
scripts/: build_miner_static.ps1  entrypoint.sh
tools/: census-query-legacy.sql
tools/provisioner/: Dockerfile  package.json  tsconfig.json
tools/provisioner/src/: config.ts  main.ts  typings.d.ts
tools/provisioner/src/assets/: miner_template.py
tools/provisioner/src/lib/: browser.ts  colab.ts  payload.ts  (+2 more)
tools/scripts/: production-preflight.ts  tsconfig.json  validate-system.ts
(+76 files in other folders)
