
[workspace]
resolver = "2"

members = [
    "apps/census-taker",
    "apps/miner-worker",
    "apps/orchestrator",
    "apps/prover",

    "libs/core/math-engine",
    "libs/core/generators",
    "libs/core/probabilistic",

    "libs/domain/models-rs",
    "libs/domain/mining-strategy",
    "libs/domain/forensics",

    "libs/infra/db-turso",
    "libs/infra/transport",
    "libs/infra/worker-client",
    "libs/infra/blockchain-client", # ✅ NIVELACIÓN: Nuevo miembro

    "libs/shared/heimdall"
]

exclude = ["libs/domain-models"]

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
