[workspace]
resolver = "2"

members = [
    "apps/census-taker",
    "apps/miner-worker",
    "apps/orchestrator",
    "apps/prover",
    "libs/core/math-engine",
    "libs/core/generators",
    "libs/core/probabilistic",
    "libs/domain/models-rs",
    "libs/domain/mining-strategy",
    "libs/domain/forensics",
    "libs/infra/db-turso",
    "libs/infra/transport",
    "libs/infra/worker-client",
    "libs/infra/blockchain-client",
    "libs/shared/heimdall"
]

exclude = ["libs/domain-models"]

# =================================================================
# CONFIGURACIÓN SOBERANA DE OPTIMIZACIÓN (WORKSPACE LEVEL)
# Esta sección evita el warning detectado en el log de Render.
# =================================================================

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

# Nivelamos las dependencias del workspace para consistencia global
[workspace.dependencies]
prospector-core-math = { path = "libs/core/math-engine" }
prospector-domain-models = { path = "libs/domain/models-rs" }
prospector-infra-db = { path = "libs/infra/db-turso" }
prospector-shared-heimdall = { path = "libs/shared/heimdall" }
