# apps/orchestrator/Cargo.toml
[package]
name = "prospector-orchestrator"
version = "0.2.0"
edition = "2021"
authors = ["Raz Podesta <metaShark Tech>"]
publish = false

[dependencies]
# --- 1. SINAPSIS INTERNA (Infra & Domain) ---
prospector-domain-models = { path = "../../libs/domain/models-rs" }
prospector-infra-db = { path = "../../libs/infra/db-turso" }
prospector-shared-heimdall = { path = "../../libs/shared/heimdall" }

# --- 2. NÚCLEO MATEMÁTICO (🔥 NUEVO: Requerido para Lab/Interceptor) ---
# El orquestador ahora necesita validar criptografía, no solo mover datos.
prospector-core-math = { path = "../../libs/core/math-engine" }
prospector-core-gen = { path = "../../libs/core/generators" }
prospector-domain-strategy = { path = "../../libs/domain/mining-strategy" }

# --- 3. MOTOR ASÍNCRONO & WEB SERVER ---
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

# --- 4. MIDDLEWARE & LOGÍSTICA ---
tower = { version = "0.4", features = ["util", "limit", "buffer"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "limit"] }

# --- 5. SERIALIZACIÓN ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- 6. OBSERVABILIDAD ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- 7. UTILIDADES ---
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# --- 8. STREAMING (SSE) ---
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
futures = "0.3"

[dev-dependencies]
http-body-util = "0.1"

[[bin]]
name = "orchestrator"
path = "src/main.rs"
