# apps/prover/Cargo.toml
# =================================================================
# APARATO: PROVER SYSTEM MANIFEST (V11.9 - ELITE HARDENED)
# CLASIFICACIÓN: OPS UTILITY (ESTRATO L6)
# RESPONSABILIDAD: PROVISIÓN DE DEPENDENCIAS PARA CERTIFICACIÓN
# =================================================================

[package]
name = "prospector-prover"
version = "0.1.1"
edition = "2021"
authors = ["Raz Podesta <metaShark Tech>"]
description = "Generador de escenarios de prueba deterministas (Golden Tickets)."

[dependencies]
# --- SINAPSIS INTERNA (MONOREPO NX) ---
prospector-core-math = { path = "../../libs/core/math-engine" }
prospector-core-gen = { path = "../../libs/core/generators" }
prospector-core-probabilistic = { path = "../../libs/core/probabilistic" }
prospector-domain-models = { path = "../../libs/domain/models-rs" }
prospector-domain-strategy = { path = "../../libs/domain/mining-strategy" }

# --- OBSERVABILIDAD (HEIMDALL ALIGNED) ---
# ✅ RESOLUCIÓN: Inyección de crates para auditoría visual de terminal
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# --- UTILIDADES DE SISTEMA ---
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
hex = "0.4"

[[bin]]
name = "prospector-prover"
path = "src/main.rs"
