# libs/core/math-engine/Cargo.toml
[package]
name = "prospector-core-math"
version = "0.2.2" # Bump por nueva capacidad paralela
edition = "2021"
authors = ["Raz Podesta <metaShark Tech>"]
description = "Motor matemático de bajo nivel para operaciones de curva elíptica secp256k1 optimizado."

[dependencies]
# Curva Elíptica (Contexto Global y Aritmética C)
secp256k1 = { version = "0.27", features = ["recovery", "rand", "global-context"] }

# Hashing
sha2 = "0.10"
ripemd = "0.1"

# Utilidades
thiserror = "1.0"
hex = "0.4"
once_cell = "1.18"
rand = "0.8"

# 🔥 PARALELISMO DE DATOS (MATRICIAL)
# Necesario para el "Wild Herd" en KangarooSolver
rayon = "1.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "secp256k1_bench"
harness = false

[lib]
name = "prospector_core_math"
path = "src/lib.rs"
