[package]
name = "prospector-core-probabilistic"
version = "0.1.1"
edition = "2021"

[dependencies]
bloomfilter = { version = "1.0.12", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
memmap2 = "0.9"
rayon = "1.8"

[dev-dependencies]
rand = "0.8"
prospector-core-math = { path = "../math-engine" }
