[package]
name = "prospector-core-probabilistic"
version = "0.1.1"
edition = "2021"
description = "Estructuras probabilísticas para auditoría masiva con hashing determinista."

[dependencies]
# --- ESTRATO DE SERIALIZACIÓN ---
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# --- ESTRATO PROBABILÍSTICO ---
bloomfilter = { version = "1.0", features = ["serde"] }
siphasher = "1.0"

# --- ESTRATO DE RENDIMIENTO ---
rayon = "1.8"
memmap2 = "0.9"
thiserror = "1.0"

[dev-dependencies]
# ✅ RESOLUCIÓN ERROR E0432/E0433: Requerido para bloom_reliability.rs
rand = "0.8"

[lib]
name = "prospector_core_probabilistic"
path = "src/lib.rs"
