
[package]
name = "prospector-domain-strategy"
version = "0.2.8"
edition = "2021"
authors = ["Raz Podesta <metaShark Tech>"]
description = "Orquestador de algoritmos de búsqueda criptográfica secp256k1 para el enjambre Hydra-Zero."

[dependencies]
# --- SINAPSIS INTERNA ---
prospector-core-math = { path = "../../core/math-engine" }
prospector-core-gen = { path = "../../core/generators" }
prospector-core-probabilistic = { path = "../../core/probabilistic" }
prospector-domain-models = { path = "../models-rs" }
prospector-domain-forensics = { path = "../forensics" }

# --- COMPUTACIÓN Y SERIALIZACIÓN ---
rayon = "1.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha1 = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
bs58 = { version = "0.5", features = ["check"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"

[dev-dependencies]
# --- ARMAMENTO DE CERTIFICACIÓN FORENSE ---
# Habilita la simulación de colisiones masivas y validación de entropía.
tokio = { version = "1.0", features = ["full"] }
proptest = "1.4"
num-bigint = "0.4"
num-traits = "0.2"

[lib]
name = "prospector_domain_strategy"
path = "src/lib.rs"
