[package]
name = "prospector-domain-models"
version = "0.1.0"
edition = "2021"
authors = ["Raz Podesta <metaShark Tech>"]
description = "Definiciones de tipos compartidos (DTOs) y Entidades del Dominio (Single Source of Truth)."

# ⚠️ CRÍTICO: AQUÍ NO DEBE HABER SECCIÓN [workspace]

[dependencies]
typeshare = "1.0" 
# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Identificadores
uuid = { version = "1.0", features = ["v4", "serde"] }

# Tiempo
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "prospector_domain_models"
path = "src/lib.rs"
