# libs/domain/models-rs/Cargo.toml
# =================================================================
# APARATO: DOMAIN MODELS MANIFEST (V11.1 - SHA2 ENABLED)
# CLASIFICACIÓN: DOMAIN ENTITIES (L2)
# RESPONSABILIDAD: GESTIÓN DE DEPENDENCIAS DE ESTRUCTURAS COMPARTIDAS
# =================================================================

[package]
name = "prospector-domain-models"
version = "0.1.1"
edition = "2021"
authors = ["Raz Podesta <metaShark Tech>"]
description = "Definiciones de tipos compartidos (DTOs) y Entidades del Dominio (Single Source of Truth)."

[dependencies]
# Sincronización Rust -> TypeScript
typeshare = "1.0"

# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Identificadores
uuid = { version = "1.0", features = ["v4", "serde"] }

# Tiempo
chrono = { version = "0.4", features = ["serde"] }

# Hashing (CRÍTICO para StratumManifest)
sha2 = "0.10"

[lib]
name = "prospector_domain_models"
path = "src/lib.rs"
