# libs/infra/db-turso/Cargo.toml
[package]
name = "prospector-infra-db"
version = "0.1.0"
edition = "2021"

[dependencies]
# Driver oficial de Turso/libSQL
libsql = { version = "0.3", features = ["serde"] }

# Modelos de Dominio
prospector-domain-models = { path = "../../domain/models-rs" }

# Utilidades Serialización & Errores
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

# --- MATEMÁTICAS DE ELITE (NUEVO) ---
# Necesario para manejar rangos de 256 bits que exceden u64/i64
num-bigint = "0.4"
num-traits = "0.2"

[lib]
name = "prospector_infra_db"
path = "src/lib.rs"
